# orderbook-dex-rs

./: .dockerignore  .gitignore  Cargo.toml  Jenkinsfile  README.md  build-spec.dna.json  customRaw.json  customSpecRaw.json  customspec.json  dna.md  dna_raw.json  node.md  npos-validator.md  rustfmt.toml  spec.json
.githooks/: pre-commit
.maintain/: Untitled-1  rename-crates-for-2.0.sh
dna/: build.rs
dna/assets/: Cargo.toml
dna/assets/src/: burn.rs  construct.rs  freeze.rs  hello.rs  lib.rs  mint.rs  tests.rs  transfer.rs  unfreeze.rs
dna/cli/: Cargo.toml  build.rs
dna/cli/src/: browser.rs  chain_spec.rs  cli.rs  factory_impl.rs  service.rs
dna/dna-staking/: cargo.toml
dna/dna-staking/src/: lib.rs
dna/exchange/: Cargo.toml
dna/exchange/src/: create_order.rs  exchange.rs  exchange_pair.rs  lib.rs  market.rs  match_order.rs  price.rs  types.rs  utils.rs
dna/executor/: Cargo.toml
dna/executor/src/: lib.rs
dna/im-online/: Cargo.toml
dna/im-online/src/: lib.rs  mock.rs  tests.rs
dna/meta-exchange/: Cargo.toml
dna/meta-exchange/src/: lib.rs
dna/primitives/: Cargo.toml
dna/res/: dna_raw.json
dna/reward/: Cargo.toml
dna/reward-debug-log/: Cargo.toml
dna/reward-debug-log/src/: lib.rs
dna/reward/src/: lib.rs  test.rs
dna/rpc/: Cargo.toml
dna/rpc-client/: Cargo.toml
dna/rpc/src/: lib.rs
dna/runtime/: Cargo.toml  build.rs
dna/runtime/src/: impls.rs  lib.rs
dna/src/: chain_spec.rs  cli.rs  fixtures.rs  main.rs  service.rs
dna/staking/: Cargo.toml
dna/staking/reward-curve/: Cargo.toml
dna/staking/reward-curve/src/: lib.rs  log.rs
dna/staking/reward-curve/tests/: tests.rs
dna/staking/src/: inflation.rs  lib.rs  migration.rs  mock.rs  slashing.rs  tests.rs
dna/staking/src/migration/: deprecated.rs  mod.rs  test_upgrade_from_master_dataset.rs  tests.rs
dna/structures/: Cargo.toml
dna/structures/src/: lib.rs  reals.rs
dna/testing/: Cargo.toml
dna/testing/src/: genesis.rs
dna/wasm-builder/: Cargo.toml
dna/wasm-builder/src/: lib.rs  prerequisites.rs  wasm_project.rs
docker/: Dockerfile  build.sh  docker-compose-local.yml  docker-compose.yml  readme-docker.adoc
interface/: developer.json  types.json
node/: build.rs
node/cli/: Cargo.toml  build.rs
node/cli/res/: dna_raw.json  spec.dna.json  spec.local.json
node/cli/src/: browser.rs  chain_spec.rs  cli.rs  command.rs  factory_impl.rs  lib.rs  service.rs
node/executor/: Cargo.toml
node/executor/src/: lib.rs
node/primitives/: Cargo.toml
node/res/: dnachain_raw.json
node/rpc/: Cargo.toml
node/rpc-client/: Cargo.toml
node/rpc/src/: lib.rs
node/runtime/: Cargo.toml  build.rs
node/runtime/src/: constants.rs  impls.rs  lib.rs  robonomics.rs  substratekitties.rs  token.rs  types.rs
node/src/: chain_spec.rs  cli.rs  fixtures.rs  main.rs  service.rs
node/testing/: Cargo.toml
node/testing/src/: genesis.rs  keyring.rs
runtime/: Cargo.toml
runtime copy/: Cargo.toml.txt
runtime copy/src/: lib.rs
runtime copy/wasm/src/: lib.rs
runtime/src/: lib.rs
runtime/wasm/: Cargo.toml  build.sh
scripts/: bulk-transfer.sh  dex.sh  identity.sh  init.sh  pm2process-prod.yml  pm2process.yml  pm2start.sh  pm2stop.sh  purge-chain.sh  transfer.sh
scripts/Docker/: Dockerfile
scripts/dev/: node0.sh  node1.sh  node2.sh
scripts/dex/: index.js  package.json  readme.md  types.js
scripts/prod/: node0.sh  node1.sh  node2.sh  nohupstart.sh  startExternalizedNode.sh  startTelemetryNode.sh
scripts/start/: node0.sh  node1.sh  node2.sh  startExternalizedNode.sh  startTelemetryNode.sh
scripts/transfer/: bulk-transfer.js  identity.js  index.js  package.json  readme.md  types.js
src/: chain_spec.rs  chain_spec_dna_backup.rs.txt  main.rs  service.rs
substrate-ros/rpc/: Cargo.toml
