[package]
name = "dnachain"
version = "0.0.1"
authors = ["BlockxLabs <info@blockxlabs.com>"]
build = "build.rs"
edition = "2018"

[[bin]]
name = "dnachain"
path = "dna/src/main.rs"

[dependencies]
# Used for fixtures
hex-literal = "0.2.1"
serde_json = "1.0.41"
sc-telemetry = { git = "https://github.com/blockxlabs/substrate", branch = "master" }
# Used for node
futures = "0.3.1"
futures01 = { package = "futures", version = "0.1.29" }
ctrlc = { version = "3.1.3", features = ["termination"] }
log = "0.4.8"
tokio = "0.1.22"
parking_lot = "0.9.0"
codec = { package = "parity-scale-codec", version = "1.0.0" }
trie-root = "0.15.2"
sp-io = { git = "https://github.com/blockxlabs/substrate", branch = "master" }
sc-cli = { git = "https://github.com/blockxlabs/substrate", branch = "master" }
primitives = { package = "sp-core", git = "https://github.com/blockxlabs/substrate", branch = "master" }
sc-executor = { git = "https://github.com/blockxlabs/substrate", branch = "master" }
sc-service = { git = "https://github.com/blockxlabs/substrate", branch = "master" }
inherents = { package = "sp-inherents", git = "https://github.com/blockxlabs/substrate", branch = "master" }
txpool = { package = "sc-transaction-pool", git = "https://github.com/blockxlabs/substrate", branch = "master" }
txpool-api = { package = "sp-transaction-pool-api", git = "https://github.com/blockxlabs/substrate", branch = "master" }
network = { package = "sc-network", git = "https://github.com/blockxlabs/substrate", branch = "master" }
aura = { package = "sc-consensus-aura", git = "https://github.com/blockxlabs/substrate", branch = "master" }
aura-primitives = { package = "sp-consensus-aura", git = "https://github.com/blockxlabs/substrate", branch = "master" }
consensus-common = { package = "sp-consensus", git = "https://github.com/blockxlabs/substrate", branch = "master" }
grandpa = { package = "pallet-grandpa", git = "https://github.com/blockxlabs/substrate", branch = "master" }
grandpa-primitives = { package = "sp-finality-grandpa", git = "https://github.com/blockxlabs/substrate", branch = "master" }
sc-client = {  git = "https://github.com/blockxlabs/substrate", branch = "master" }
runtime = { package = "dna-runtime", path = "dna/runtime" }
sp-runtime = { git = "https://github.com/blockxlabs/substrate", branch = "master" }
basic-authorship = { package = "sc-basic-authority", git = "https://github.com/blockxlabs/substrate", branch = "master" }

[build-dependencies]
vergen = "3.0.4"
build-script-utils = { package = "substrate-build-script-utils", git = "https://github.com/blockxlabs/substrate", branch = "master" }
