[package]
name = "dna-chain"
version = "0.0.1"
authors = ["BlockX Labs <info@blockxlabs.com>"]
build = "node/build.rs"
edition = "2018"

[[bin]]
name = "dnachain"
path = "node/src/main.rs"

[dependencies]
# Used for fixtures
hex-literal = "0.2.1"
serde_json = "1.0.41"
substrate-telemetry = {package="sc-telemetry", git = "https://github.com/blockxlabs/substrate", branch = "master" }
# Used for node
futures = "0.3.1"
futures01 = { package = "futures", version = "0.1.29" }
ctrlc = { version = "3.1.3", features = ["termination"] }
log = "0.4.8"
tokio = "0.1.22"
parking_lot = "0.9.0"
codec = { package = "parity-scale-codec", version = "1.0.0" }
trie-root = "0.15.2"
sr-io = { package="sp-io", git = "https://github.com/blockxlabs/substrate", branch = "master" }
substrate-cli = {package="sc-cli" ,git = "https://github.com/blockxlabs/substrate", branch = "master" }
primitives = { package = "sp-core", git = "https://github.com/blockxlabs/substrate", branch = "master" }
substrate-executor = {package="sc-executor", git = "https://github.com/blockxlabs/substrate", branch = "master" }
substrate-service = {package="sc-service", git = "https://github.com/blockxlabs/substrate", branch = "master" }
inherents = { package = "sp-inherents", git = "https://github.com/blockxlabs/substrate", branch = "master" }
txpool = { package = "sc-transaction-pool", git = "https://github.com/blockxlabs/substrate", branch = "master" }
txpool-api = { package = "sp-transaction-pool-api", git = "https://github.com/blockxlabs/substrate", branch = "master" }
network = { package = "sc-network", git = "https://github.com/blockxlabs/substrate", branch = "master" }
consensus-common = { package = "sp-consensus", git = "https://github.com/blockxlabs/substrate", branch = "master" }
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/blockxlabs/substrate", branch = "master" }
grandpa-primitives = { package = "sp-finality-grandpa", git = "https://github.com/blockxlabs/substrate", branch = "master" }
substrate-client = { package="sc-client", git = "https://github.com/blockxlabs/substrate", branch = "master" }
runtime = { package = "dna-runtime", path = "node/runtime" }
sp-runtime = {git = "https://github.com/blockxlabs/substrate", branch = "master" }
basic-authorship = { package = "sc-basic-authority", git = "https://github.com/blockxlabs/substrate", branch = "master" }
babe = { package = "pallet-babe", git = "https://github.com/blockxlabs/substrate", default-features = false }
babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/blockxlabs/substrate", default-features = false }
im-online = { package = "pallet-im-online", git = "https://github.com/blockxlabs/substrate" }

[build-dependencies]
vergen = "3.0.4"
build-script-utils = { package = "substrate-build-script-utils", git = "https://github.com/blockxlabs/substrate", branch = "master" }
