[workspace]
default-members = [ "node/cli" ]
members = [
    "node/executor",
    "node/runtime",
    "node/cli",
    "dna/assets",
    "dna/exchange",
    #"dna/reward-debug-log",
    "dna/im-online",
    "dna/staking"
]

[profile.release]
# Substrate runtime requires unwinding.
panic = "unwind"
incremental = true