[package]
name = "dna-exchange"
version = "0.1.0"
authors = ["BlockX Labs <info@blockxlabs.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false }
# We need the H256 of this module
primitives = { package = "sp-core", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "master" }
# Needed for various traits.
sr-primitives = { package = "sp-runtime", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "master" }
# Needed for type-safe access to storage DB.
support = { package = "frame-support", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "master" }
# `system` module provides us with all sorts of useful stuff and macros depend on it being around.
system = { package = "frame-system", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "master" }
# Palette specific to this module

[dev-dependencies]
rstd = { package = "sr-std", git = "https://github.com/blockxlabs/substrate", branch = "master" }
runtime-io = { package = "sr-io", git = "https://github.com/blockxlabs/substrate", branch = "master" }

[features]
default = ["std"]
std = [
  "serde",
  "codec/std",
  "primitives/std",
  "sr-primitives/std",
  "support/std",
  "system/std",
]