[package]
name = "dna-executor"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Substrate node implementation in Rust."
edition = "2018"

[dependencies]
trie-root = "0.15.2"
codec = { package = "parity-scale-codec", version = "1.0.0" }
runtime_io = { package = "sp-io", git = "https://github.com/blockxlabs/substrate.git" }
state_machine = { package = "sp-state-machine", git = "https://github.com/blockxlabs/substrate.git" }
sc-executor = { git = "https://github.com/blockxlabs/substrate.git" }
primitives = { package = "sp-core", git = "https://github.com/blockxlabs/substrate.git" }
trie = { package = "sp-trie", git = "https://github.com/blockxlabs/substrate.git" }
node-primitives = { path = "../primitives" }
node-runtime = { path = "../runtime" }

[dev-dependencies]
node-testing = { path = "../testing" }
test-client = { package = "substrate-test-client", git = "https://github.com/blockxlabs/substrate.git" }
sp-runtime = { git = "https://github.com/blockxlabs/substrate.git" }
runtime_support = { package = "paint-support", git = "https://github.com/blockxlabs/substrate.git" }
balances = { package = "paint-balances", git = "https://github.com/blockxlabs/substrate.git" }
transaction-payment = { package = "paint-transaction-payment", git = "https://github.com/blockxlabs/substrate.git" }
session = { package = "paint-session", git = "https://github.com/blockxlabs/substrate.git" }
system = { package = "paint-system", git = "https://github.com/blockxlabs/substrate.git" }
timestamp = { package = "paint-timestamp", git = "https://github.com/blockxlabs/substrate.git" }
treasury = { package = "paint-treasury", git = "https://github.com/blockxlabs/substrate.git" }
contracts = { package = "paint-contracts", git = "https://github.com/blockxlabs/substrate.git" }
grandpa = { package = "paint-grandpa", git = "https://github.com/blockxlabs/substrate.git" }
indices = { package = "paint-indices", git = "https://github.com/blockxlabs/substrate.git" }
wabt = "0.9.2"
criterion = "0.3.0"

[features]
wasmtime = [
    "sc-executor/wasmtime",
]
wasmi-errno = [
	"sc-executor/wasmi-errno",
]
stress-test = []

[[bench]]
name = "bench"
harness = false

