[package]
name = "pallet-im-online"
version = "2.0.0"
authors = ["BlockX Labs <info@blockxlabs.io>"]
edition = "2018"

[dependencies]
log = "0.4.8"
sp-application-crypto = { git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev-test-0" }
pallet-authorship = { git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev-test-0" }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
sp-core = { git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev-test-0" }
sp-std = { git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev-test-0" }
serde = { version = "1.0.101", optional = true }
pallet-session = { git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev-test-0" }
sp-io = { git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev-test-0" }
sp-runtime = { git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev-test-0" }
sp-staking = { git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev-test-0" }
frame-support = { git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev-test-0" }
frame-system = { git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev-test-0" }

[features]
default = ["std", "pallet-session/historical"]
std = [
	"sp-application-crypto/std",
	"pallet-authorship/std",
	"codec/std",
	"sp-core/std",
	"sp-std/std",
	"serde",
	"pallet-session/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-staking/std",
	"frame-support/std",
	"frame-system/std",
]