[package]
name = "pallet-im-online"
version = "2.0.0"
authors = ["BlockX Labs <info@blockxlabs.io>"]
edition = "2018"

[dependencies]
sp-application-crypto = { git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev" }
pallet-authorship = { git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev" }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
sp-core = { git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev" }
sp-std = { git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev" }
serde = { version = "1.0.101", optional = true }
pallet-session = { git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev" }
sp-io = { git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev" }
sp-runtime = { git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev" }
sp-staking = { git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev" }
frame-support = { git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev" }
frame-system = { git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "blockx-dev" }

[features]
default = ["std", "pallet-session/historical"]
std = [
	"sp-application-crypto/std",
	"pallet-authorship/std",
	"codec/std",
	"sp-core/std",
	"sp-std/std",
	"serde",
	"pallet-session/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-staking/std",
	"frame-support/std",
	"frame-system/std",
]