[package]
name = "dna-rpc"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
client = { package = "substrate-client", git = "https://github.com/blockxlabs/substrate.git" }
jsonrpc-core = "14.0.3"
node-primitives = { path = "../primitives" }
node-runtime = { path = "../runtime" }
sr-primitives = { git = "https://github.com/blockxlabs/substrate.git" }
paint-contracts-rpc = { git = "https://github.com/blockxlabs/substrate.git" }
paint-transaction-payment-rpc = { git = "https://github.com/blockxlabs/substrate.git" }
paint-system-rpc = { git = "https://github.com/blockxlabs/substrate.git" }
transaction_pool = { package = "substrate-transaction-pool", git = "https://github.com/blockxlabs/substrate.git" }
