[package]
name = "dna-runtime"
version = "0.1.0"
authors = ["BlockX Labs <info@blockxlabs.com>"]
edition = "2018"

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "1.0.6", default-features = false, features = ["derive"] }
integer-sqrt = { version = "0.1.2" }
safe-mix = { version = "1.0", default-features = false }
rustc-hex = { version = "2.0", optional = true }
serde = { version = "1.0.102", optional = true }

# primitives
authority-discovery-primitives = { package = "sp-authority-discovery", git = "https://github.com/blockxlabs/substrate.git", default-features = false }
babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/blockxlabs/substrate.git", default-features = false }
block-builder-api = { package = "sp-block-builder", git = "https://github.com/blockxlabs/substrate.git", default-features = false}
inherents = { package = "sp-inherents", git = "https://github.com/blockxlabs/substrate.git", default-features = false }
node-primitives = { git = "https://github.com/blockxlabs/substrate.git", default-features = false }
offchain-primitives = { package = "sp-offchain", git = "https://github.com/blockxlabs/substrate.git", default-features = false }
primitives = { package = "sp-core",  git = "https://github.com/blockxlabs/substrate.git", default-features = false }
rstd = { package = "sp-std", git = "https://github.com/blockxlabs/substrate.git", default-features = false }
sp-api = { git = "https://github.com/blockxlabs/substrate.git", default-features = false }
sp-runtime = { git = "https://github.com/blockxlabs/substrate.git", default-features = false }
sp-staking = { git = "https://github.com/blockxlabs/substrate.git", default-features = false }
sp-keyring = { git = "https://github.com/blockxlabs/substrate.git", optional = true }
sp-session = { git = "https://github.com/blockxlabs/substrate.git", default-features = false }
tx-pool-api = { package = "sc-transaction-pool", git = "https://github.com/blockxlabs/substrate.git", default-features = false, optional = true }
version = { package = "sp-version", git = "https://github.com/blockxlabs/substrate.git", default-features = false }

# paint dependencies
authority-discovery = { package = "pallet-authority-discovery", git = "https://github.com/blockxlabs/substrate.git", default-features = false }
authorship = { package = "pallet-authorship", git = "https://github.com/blockxlabs/substrate.git", default-features = false }
babe = { package = "pallet-babe", git = "https://github.com/blockxlabs/substrate.git", default-features = false }
balances = { package = "pallet-balances", git = "https://github.com/blockxlabs/substrate.git", default-features = false }
contracts = { package = "pallet-contracts", git = "https://github.com/blockxlabs/substrate.git", default-features = false }
contracts-rpc-runtime-api = { package = "pallet-contracts-rpc-runtime-api", git = "https://github.com/blockxlabs/substrate.git", default-features = false }
executive = { package = "frame-executive", git = "https://github.com/blockxlabs/substrate.git", default-features = false }
finality-tracker = { package = "pallet-finality-tracker", git = "https://github.com/blockxlabs/substrate.git", default-features = false }
grandpa = { package = "pallet-grandpa", git = "https://github.com/blockxlabs/substrate.git", default-features = false }
im-online = { package = "pallet-im-online", git = "https://github.com/blockxlabs/substrate.git", default-features = false }
indices = { package = "pallet-indices", git = "https://github.com/blockxlabs/substrate.git", default-features = false }
offences = { package = "pallet-offences", git = "https://github.com/blockxlabs/substrate.git", default-features = false }
randomness-collective-flip = { package = "pallet-randomness-collective-flip", git = "https://github.com/blockxlabs/substrate.git", default-features = false }
session = { package = "pallet-session", git = "https://github.com/blockxlabs/substrate.git", default-features = false, features = ["historical"] }
staking = { package = "pallet-staking", git = "https://github.com/blockxlabs/substrate.git", default-features = false }
pallet-staking-reward-curve = { git = "https://github.com/blockxlabs/substrate.git"}
sudo = { package = "pallet-sudo", git = "https://github.com/blockxlabs/substrate.git", default-features = false }
support = { package = "frame-support", git = "https://github.com/blockxlabs/substrate.git", default-features = false }
system = { package = "frame-system", git = "https://github.com/blockxlabs/substrate.git", default-features = false }
system-rpc-runtime-api = { package = "frame-system-rpc-runtime-api", git = "https://github.com/blockxlabs/substrate.git", default-features = false }
timestamp = { package = "pallet-timestamp", git = "https://github.com/blockxlabs/substrate.git", default-features = false }
utility = { package = "frame-utility", git = "https://github.com/blockxlabs/substrate.git", default-features = false }
transaction-payment = { package = "pallet-transaction-payment", git = "https://github.com/blockxlabs/substrate.git", default-features = false }
transaction-payment-rpc-runtime-api = { package = "pallet-transaction-payment-rpc-runtime-api", git = "https://github.com/blockxlabs/substrate.git", default-features = false }

[build-dependencies]
wasm-builder-runner = { package = "substrate-wasm-builder-runner", git = "https://github.com/blockxlabs/substrate.git", version = "1.0.4" }

[dev-dependencies]
runtime_io = { package = "sp-io", git = "https://github.com/blockxlabs/substrate.git" }
aura = { package = "pallet-aura", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "master" }
aura-primitives = { package = "substrate-consensus-aura-primitives", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "master" }
balances = { package = "pallet-balances", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "master" }
block-builder-api = { package = "substrate-block-builder-runtime-api", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "master" }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
executive = { package = "frame-executive", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "master" }
grandpa = { package = "pallet-grandpa", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "master" }
indices = { package = "pallet-indices", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "master" }
inherents = { package = "substrate-inherents", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "master" }
offchain-primitives = { package = "substrate-offchain-primitives", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "master" }
primitives = { package = "substrate-primitives", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "master" }
randomness-collective-flip = { package = "pallet-randomness-collective-flip", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "master" }
rstd = { package = "sr-std", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "master" }
runtime-io = { package = "sr-io", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "master" }
safe-mix = { version = "1.0.0", default-features = false }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
sr-api = { git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "master" }
sr-primitives = { git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "master" }
substrate-session = { git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "master" }
sudo = { package = "pallet-sudo", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "master" }
support = { package = "frame-support", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "master" }
system = { package = "frame-system", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "master" }
timestamp = { package = "pallet-timestamp", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "master" }
transaction-payment = { package = "pallet-transaction-payment", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "master" }
txpool-runtime-api = { package = "sp-transaction-pool-runtime-api", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "master" }
version = { package = "sr-version", git = "https://github.com/blockxlabs/substrate", default-features = false, branch = "master" }
#assets = { package = "modules-assets", path = "../../modules/assets", default-features = false }
#oracle = { package = "modules-oracle", path = "../../modules/oracle", default-features = false }
#contracts = { package = "modules-contracts", path = "../../modules/contracts", default-features = false }

[build-dependencies]
wasm-builder-runner = { package = "substrate-wasm-builder-runner", git = "https://github.com/blockxlabs/substrate", branch = "master", version = "1.0.4" }

[features]
default = ["std"]
std = [
	"aura-primitives/std",
	"aura/std",
	"balances/std",
	"block-builder-api/std",
	"codec/std",
	"executive/std",
	"grandpa/std",
	"indices/std",
	"inherents/std",
	"offchain-primitives/std",
	"primitives/std",
	"randomness-collective-flip/std",
	"rstd/std",
	"runtime-io/std",
	"safe-mix/std",
	"serde",
	"session/std",
	"sp-api/std",
	"sp-runtime/std",
	"sp-staking/std",
	"staking/std",
	"sp-keyring",
	"sp-session/std",
	"sudo/std",
	"support/std",
	"system/std",
	"timestamp/std",
	"transaction-payment/std",
	"txpool-runtime-api/std",
	"version/std",
]
